ECG : alignement rythme cardiaque

--- a/explorationECG.ipynb
+++ b/explorationECG.ipynb
@@ -553,20 +553,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 235,
    "outputs": [
     {
      "data": {
       "text/plain": "                                       creationDate  value\nstartDate                                                 \n2022-02-27 15:52:31+01:00 2022-02-27 15:52:32+01:00     91\n2022-02-27 15:52:32+01:00 2022-02-27 15:52:32+01:00     90\n2022-02-27 15:52:33+01:00 2022-02-27 15:52:34+01:00     88\n2022-02-27 15:52:34+01:00 2022-02-27 15:52:34+01:00     88\n2022-02-27 15:52:35+01:00 2022-02-27 15:52:36+01:00     85\n...                                             ...    ...\n2022-02-27 16:11:34+01:00 2022-02-27 16:11:35+01:00     86\n2022-02-27 16:11:35+01:00 2022-02-27 16:11:36+01:00     85\n2022-02-27 16:11:36+01:00 2022-02-27 16:11:36+01:00     85\n2022-02-27 16:11:37+01:00 2022-02-27 16:11:38+01:00     85\n2022-02-27 16:11:38+01:00 2022-02-27 16:11:39+01:00     85\n\n[910 rows x 2 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>creationDate</th>\n      <th>value</th>\n    </tr>\n    <tr>\n      <th>startDate</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2022-02-27 15:52:31+01:00</th>\n      <td>2022-02-27 15:52:32+01:00</td>\n      <td>91</td>\n    </tr>\n    <tr>\n      <th>2022-02-27 15:52:32+01:00</th>\n      <td>2022-02-27 15:52:32+01:00</td>\n      <td>90</td>\n    </tr>\n    <tr>\n      <th>2022-02-27 15:52:33+01:00</th>\n      <td>2022-02-27 15:52:34+01:00</td>\n      <td>88</td>\n    </tr>\n    <tr>\n      <th>2022-02-27 15:52:34+01:00</th>\n      <td>2022-02-27 15:52:34+01:00</td>\n      <td>88</td>\n    </tr>\n    <tr>\n      <th>2022-02-27 15:52:35+01:00</th>\n      <td>2022-02-27 15:52:36+01:00</td>\n      <td>85</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2022-02-27 16:11:34+01:00</th>\n      <td>2022-02-27 16:11:35+01:00</td>\n      <td>86</td>\n    </tr>\n    <tr>\n      <th>2022-02-27 16:11:35+01:00</th>\n      <td>2022-02-27 16:11:36+01:00</td>\n      <td>85</td>\n    </tr>\n    <tr>\n      <th>2022-02-27 16:11:36+01:00</th>\n      <td>2022-02-27 16:11:36+01:00</td>\n      <td>85</td>\n    </tr>\n    <tr>\n      <th>2022-02-27 16:11:37+01:00</th>\n      <td>2022-02-27 16:11:38+01:00</td>\n      <td>85</td>\n    </tr>\n    <tr>\n      <th>2022-02-27 16:11:38+01:00</th>\n      <td>2022-02-27 16:11:39+01:00</td>\n      <td>85</td>\n    </tr>\n  </tbody>\n</table>\n<p>910 rows × 2 columns</p>\n</div>"
      },
-     "execution_count": 188,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rythme.loc[(rythme.index.day==pd.Timestamp(\"2022-02-27 16:11:38+01:00\").day) & (rythme.index.year==pd.Timestamp(\"2022-02-27 16:11:38+01:00\").year) & (rythme.index.month==pd.Timestamp(\"2022-02-27 16:11:38+01:00\").month)]"
+    "rythme.loc[(rythme.index.day==pd.Timestamp(\"2022-02-27 15:52:28+01:00\").day) & (rythme.index.year==pd.Timestamp(\"2022-02-27 15:52:28+01:00\").year) & (rythme.index.month==pd.Timestamp(\"2022-02-27 15:52:28+01:00\").month)]"
    ],
    "metadata": {
     "collapsed": false,
@@ -637,6 +637,30 @@
    ],
    "source": [
     "rythme.loc[(rythme.index - pd.Timestamp(\"2022-02-27 16:04:16+01:00\")).total_seconds() == -4]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Empty DataFrame\nColumns: [creationDate, value]\nIndex: []",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>creationDate</th>\n      <th>value</th>\n    </tr>\n    <tr>\n      <th>startDate</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 234,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rythme.loc[(rythme.index - pd.Timestamp(\"2022-02-27 15:52:28+01:00\")).total_seconds() == -4]"
    ],
    "metadata": {
     "collapsed": false,
@@ -809,45 +833,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 241,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-02-27 15:52:28+01:00 non trouvé\n",
-      "2022-02-27 15:53:02+01:00 non trouvé\n",
-      "2022-02-27 15:53:36+01:00 non trouvé\n",
-      "2022-02-27 15:54:11+01:00 non trouvé\n",
-      "2022-02-27 15:54:45+01:00 non trouvé\n",
-      "2022-02-27 15:55:20+01:00 non trouvé\n",
-      "2022-02-27 15:55:54+01:00 non trouvé\n",
-      "2022-02-27 15:56:29+01:00 non trouvé\n",
-      "2022-02-27 15:57:03+01:00 non trouvé\n",
-      "2022-02-27 15:57:38+01:00 non trouvé\n",
-      "2022-02-27 15:58:13+01:00 non trouvé\n",
-      "2022-02-27 15:58:47+01:00 non trouvé\n",
-      "2022-02-27 15:59:22+01:00 non trouvé\n",
-      "2022-02-27 16:00:12+01:00 non trouvé\n",
-      "2022-02-27 16:00:47+01:00 non trouvé\n",
-      "2022-02-27 16:01:21+01:00 non trouvé\n",
-      "2022-02-27 16:01:57+01:00 non trouvé\n",
-      "2022-02-27 16:02:32+01:00 non trouvé\n",
-      "2022-02-27 16:03:08+01:00 non trouvé\n",
-      "2022-02-27 16:03:42+01:00 non trouvé\n",
-      "2022-02-27 16:04:16+01:00 non trouvé\n",
-      "2022-02-27 16:04:51+01:00 non trouvé\n",
-      "2022-02-27 16:05:25+01:00 non trouvé\n",
-      "2022-02-27 16:05:59+01:00 non trouvé\n",
-      "2022-02-27 16:06:33+01:00 non trouvé\n",
-      "2022-02-27 16:07:09+01:00 non trouvé\n",
-      "2022-02-27 16:07:44+01:00 non trouvé\n",
-      "2022-02-27 16:08:19+01:00 non trouvé\n",
-      "2022-02-27 16:08:54+01:00 non trouvé\n",
-      "2022-02-27 16:09:28+01:00 non trouvé\n",
-      "2022-02-27 16:10:02+01:00 non trouvé\n",
-      "2022-02-27 16:10:36+01:00 non trouvé\n",
-      "2022-02-27 16:11:13+01:00 non trouvé\n"
+      "90\n",
+      " ------------------------- à 2022-02-27 15:52:28+01:00\n",
+      "88\n",
+      " ------------------------- à 2022-02-27 15:53:02+01:00\n",
+      "92\n",
+      " ------------------------- à 2022-02-27 15:53:36+01:00\n",
+      "80\n",
+      " ------------------------- à 2022-02-27 15:54:11+01:00\n",
+      "88\n",
+      " ------------------------- à 2022-02-27 15:54:45+01:00\n",
+      "81\n",
+      " ------------------------- à 2022-02-27 15:55:20+01:00\n",
+      "88\n",
+      " ------------------------- à 2022-02-27 15:55:54+01:00\n",
+      "83\n",
+      " ------------------------- à 2022-02-27 15:56:29+01:00\n",
+      "84\n",
+      " ------------------------- à 2022-02-27 15:57:03+01:00\n",
+      "91\n",
+      " ------------------------- à 2022-02-27 15:57:38+01:00\n",
+      "97\n",
+      " ------------------------- à 2022-02-27 15:58:13+01:00\n",
+      "94\n",
+      " ------------------------- à 2022-02-27 15:58:47+01:00\n",
+      "85\n",
+      " ------------------------- à 2022-02-27 15:59:22+01:00\n",
+      "80\n",
+      " ------------------------- à 2022-02-27 16:00:12+01:00\n",
+      "83\n",
+      " ------------------------- à 2022-02-27 16:00:47+01:00\n",
+      "85\n",
+      " ------------------------- à 2022-02-27 16:01:21+01:00\n",
+      "78\n",
+      " ------------------------- à 2022-02-27 16:01:57+01:00\n",
+      "95\n",
+      " ------------------------- à 2022-02-27 16:02:32+01:00\n",
+      "95\n",
+      " ------------------------- à 2022-02-27 16:03:08+01:00\n",
+      "93\n",
+      " ------------------------- à 2022-02-27 16:03:42+01:00\n",
+      "74\n",
+      " ------------------------- à 2022-02-27 16:04:16+01:00\n",
+      "78\n",
+      " ------------------------- à 2022-02-27 16:04:51+01:00\n",
+      "93\n",
+      " ------------------------- à 2022-02-27 16:05:25+01:00\n",
+      "93\n",
+      " ------------------------- à 2022-02-27 16:05:59+01:00\n",
+      "84\n",
+      " ------------------------- à 2022-02-27 16:06:33+01:00\n",
+      "94\n",
+      " ------------------------- à 2022-02-27 16:07:09+01:00\n",
+      "83\n",
+      " ------------------------- à 2022-02-27 16:07:44+01:00\n",
+      "97\n",
+      " ------------------------- à 2022-02-27 16:08:19+01:00\n",
+      "91\n",
+      " ------------------------- à 2022-02-27 16:08:54+01:00\n",
+      "96\n",
+      " ------------------------- à 2022-02-27 16:09:28+01:00\n",
+      "97\n",
+      " ------------------------- à 2022-02-27 16:10:02+01:00\n",
+      "98\n",
+      " ------------------------- à 2022-02-27 16:10:36+01:00\n",
+      "90\n",
+      " ------------------------- à 2022-02-27 16:11:13+01:00\n"
      ]
     }
    ],
@@ -856,11 +913,17 @@
     "    date = lookForDate(f)\n",
     "    #print(date[0], type(date[0]))\n",
     "    ecg = pd.read_csv(f,skiprows=13,header=None,names=[\"derivation\",\"derivationDI\"])\n",
-    "    if date[0] in rythme.index:\n",
-    "        print(\"valeur : \"+rythme.loc[date[0]].value+\" à \"+str(date[0]))\n",
+    "    #if date[0] in rythme.index:\n",
+    "    #    print(\"valeur : \"+rythme.loc[date[0]].value+\" à \"+str(date[0]))\n",
+    "    #else:\n",
+    "    #    print(str(date[0])+\" non trouvé\")\n",
+    "    rate = rythme.loc[((rythme.index - date[0]).total_seconds() >= 4) & ((rythme.index - date[0]).total_seconds() <= 10)]['value']\n",
+    "    if len(rate)>0:\n",
+    "        print (rate[0])\n",
+    "        print(\" ------------------------- à \"+str(date[0]))\n",
     "    else:\n",
-    "        print(str(date[0])+\" non trouvé\")\n",
-    "    rythme.loc[(rythme.index.day==date[0].day) & (rythme.index.year==date[0].year) & (rythme.index.month==date[0].month) & ]['value']"
+    "        print(\" !!!!!! NON TROUVE : \"+ str(date[0]))\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
