ECG : alignement rythme cardiaque

--- a/explorationECG.ipynb
+++ b/explorationECG.ipynb
@@ -671,6 +671,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 253,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                       creationDate  value\n",
+      "startDate                                                 \n",
+      "2022-02-27 16:04:12+01:00 2022-02-27 16:04:13+01:00     87\n",
+      "66509\n"
+     ]
+    }
+   ],
+   "source": [
+    "indices = rythme.loc[(rythme.index - pd.Timestamp(\"2022-02-27 16:04:16+01:00\")).total_seconds() == -4]\n",
+    "print(indices)\n",
+    "print(rythme.index.get_loc(indices.index[0]))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 162,
    "outputs": [
     {
@@ -913,10 +940,6 @@
     "    date = lookForDate(f)\n",
     "    #print(date[0], type(date[0]))\n",
     "    ecg = pd.read_csv(f,skiprows=13,header=None,names=[\"derivation\",\"derivationDI\"])\n",
-    "    #if date[0] in rythme.index:\n",
-    "    #    print(\"valeur : \"+rythme.loc[date[0]].value+\" à \"+str(date[0]))\n",
-    "    #else:\n",
-    "    #    print(str(date[0])+\" non trouvé\")\n",
     "    rate = rythme.loc[((rythme.index - date[0]).total_seconds() >= 4) & ((rythme.index - date[0]).total_seconds() <= 10)]['value']\n",
     "    if len(rate)>0:\n",
     "        print (rate[0])\n",
