ECG : alignement rythme cardiaque

--- a/explorationECG.ipynb
+++ b/explorationECG.ipynb
@@ -860,78 +860,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 258,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "90\n",
-      " ------------------------- à 2022-02-27 15:52:28+01:00\n",
+      " ------------------------- à 2022-02-27 15:52:28+01:00    ligne 65959\n",
       "88\n",
-      " ------------------------- à 2022-02-27 15:53:02+01:00\n",
+      " ------------------------- à 2022-02-27 15:53:02+01:00    ligne 65982\n",
       "92\n",
-      " ------------------------- à 2022-02-27 15:53:36+01:00\n",
+      " ------------------------- à 2022-02-27 15:53:36+01:00    ligne 66009\n",
       "80\n",
-      " ------------------------- à 2022-02-27 15:54:11+01:00\n",
+      " ------------------------- à 2022-02-27 15:54:11+01:00    ligne 66038\n",
       "88\n",
-      " ------------------------- à 2022-02-27 15:54:45+01:00\n",
+      " ------------------------- à 2022-02-27 15:54:45+01:00    ligne 66066\n",
       "81\n",
-      " ------------------------- à 2022-02-27 15:55:20+01:00\n",
+      " ------------------------- à 2022-02-27 15:55:20+01:00    ligne 66093\n",
       "88\n",
-      " ------------------------- à 2022-02-27 15:55:54+01:00\n",
+      " ------------------------- à 2022-02-27 15:55:54+01:00    ligne 66119\n",
       "83\n",
-      " ------------------------- à 2022-02-27 15:56:29+01:00\n",
+      " ------------------------- à 2022-02-27 15:56:29+01:00    ligne 66147\n",
       "84\n",
-      " ------------------------- à 2022-02-27 15:57:03+01:00\n",
+      " ------------------------- à 2022-02-27 15:57:03+01:00    ligne 66174\n",
       "91\n",
-      " ------------------------- à 2022-02-27 15:57:38+01:00\n",
+      " ------------------------- à 2022-02-27 15:57:38+01:00    ligne 66203\n",
       "97\n",
-      " ------------------------- à 2022-02-27 15:58:13+01:00\n",
+      " ------------------------- à 2022-02-27 15:58:13+01:00    ligne 66230\n",
       "94\n",
-      " ------------------------- à 2022-02-27 15:58:47+01:00\n",
+      " ------------------------- à 2022-02-27 15:58:47+01:00    ligne 66258\n",
       "85\n",
-      " ------------------------- à 2022-02-27 15:59:22+01:00\n",
+      " ------------------------- à 2022-02-27 15:59:22+01:00    ligne 66286\n",
       "80\n",
-      " ------------------------- à 2022-02-27 16:00:12+01:00\n",
+      " ------------------------- à 2022-02-27 16:00:12+01:00    ligne 66315\n",
       "83\n",
-      " ------------------------- à 2022-02-27 16:00:47+01:00\n",
+      " ------------------------- à 2022-02-27 16:00:47+01:00    ligne 66344\n",
       "85\n",
-      " ------------------------- à 2022-02-27 16:01:21+01:00\n",
+      " ------------------------- à 2022-02-27 16:01:21+01:00    ligne 66371\n",
       "78\n",
-      " ------------------------- à 2022-02-27 16:01:57+01:00\n",
+      " ------------------------- à 2022-02-27 16:01:57+01:00    ligne 66399\n",
       "95\n",
-      " ------------------------- à 2022-02-27 16:02:32+01:00\n",
+      " ------------------------- à 2022-02-27 16:02:32+01:00    ligne 66427\n",
       "95\n",
-      " ------------------------- à 2022-02-27 16:03:08+01:00\n",
+      " ------------------------- à 2022-02-27 16:03:08+01:00    ligne 66455\n",
       "93\n",
-      " ------------------------- à 2022-02-27 16:03:42+01:00\n",
+      " ------------------------- à 2022-02-27 16:03:42+01:00    ligne 66483\n",
       "74\n",
-      " ------------------------- à 2022-02-27 16:04:16+01:00\n",
+      " ------------------------- à 2022-02-27 16:04:16+01:00    ligne 66510\n",
       "78\n",
-      " ------------------------- à 2022-02-27 16:04:51+01:00\n",
+      " ------------------------- à 2022-02-27 16:04:51+01:00    ligne 66538\n",
       "93\n",
-      " ------------------------- à 2022-02-27 16:05:25+01:00\n",
+      " ------------------------- à 2022-02-27 16:05:25+01:00    ligne 66566\n",
       "93\n",
-      " ------------------------- à 2022-02-27 16:05:59+01:00\n",
+      " ------------------------- à 2022-02-27 16:05:59+01:00    ligne 66593\n",
       "84\n",
-      " ------------------------- à 2022-02-27 16:06:33+01:00\n",
+      " ------------------------- à 2022-02-27 16:06:33+01:00    ligne 66621\n",
       "94\n",
-      " ------------------------- à 2022-02-27 16:07:09+01:00\n",
+      " ------------------------- à 2022-02-27 16:07:09+01:00    ligne 66650\n",
       "83\n",
-      " ------------------------- à 2022-02-27 16:07:44+01:00\n",
+      " ------------------------- à 2022-02-27 16:07:44+01:00    ligne 66677\n",
       "97\n",
-      " ------------------------- à 2022-02-27 16:08:19+01:00\n",
+      " ------------------------- à 2022-02-27 16:08:19+01:00    ligne 66706\n",
       "91\n",
-      " ------------------------- à 2022-02-27 16:08:54+01:00\n",
+      " ------------------------- à 2022-02-27 16:08:54+01:00    ligne 66734\n",
       "96\n",
-      " ------------------------- à 2022-02-27 16:09:28+01:00\n",
+      " ------------------------- à 2022-02-27 16:09:28+01:00    ligne 66762\n",
       "97\n",
-      " ------------------------- à 2022-02-27 16:10:02+01:00\n",
+      " ------------------------- à 2022-02-27 16:10:02+01:00    ligne 66789\n",
       "98\n",
-      " ------------------------- à 2022-02-27 16:10:36+01:00\n",
+      " ------------------------- à 2022-02-27 16:10:36+01:00    ligne 66817\n",
       "90\n",
-      " ------------------------- à 2022-02-27 16:11:13+01:00\n"
+      " ------------------------- à 2022-02-27 16:11:13+01:00    ligne 66846\n"
      ]
     }
    ],
@@ -940,10 +940,12 @@
     "    date = lookForDate(f)\n",
     "    #print(date[0], type(date[0]))\n",
     "    ecg = pd.read_csv(f,skiprows=13,header=None,names=[\"derivation\",\"derivationDI\"])\n",
-    "    rate = rythme.loc[((rythme.index - date[0]).total_seconds() >= 4) & ((rythme.index - date[0]).total_seconds() <= 10)]['value']\n",
+    "    indiceRate = rythme.loc[((rythme.index - date[0]).total_seconds() >= 4) & ((rythme.index - date[0]).total_seconds() <= 10)]\n",
+    "    rate = indiceRate['value']\n",
+    "    indice = rythme.index.get_loc(indiceRate.index[0])\n",
     "    if len(rate)>0:\n",
     "        print (rate[0])\n",
-    "        print(\" ------------------------- à \"+str(date[0]))\n",
+    "        print(\" ------------------------- à \"+str(date[0])+\"    ligne \"+str(indice))\n",
     "    else:\n",
     "        print(\" !!!!!! NON TROUVE : \"+ str(date[0]))\n",
     "\n"
