--- a/explorationECG.ipynb
+++ b/explorationECG.ipynb
@@ -18,6 +18,18 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "* Les fichiers ECG doivent être numérotés de 00 à .... (à l'origine le 1er fichier n'a pas de numéro, le second porte le numéro 1 etc.)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 75,
    "outputs": [],
