modifs commentaires et affichage

--- a/explorationECG.ipynb
+++ b/explorationECG.ipynb
@@ -1137,8 +1137,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Synchronisation rythme cardiaque et ECG\n",
-    "Open each .csv file, look for creation date and then search for this date into export.xml"
+    "# ==============================================================================\n",
+    "# Lecture de tous les fichiers ECG\n",
+    "## synchronisation rythme cardiaque et ECG, estimation du rythme d'après l'ECG et affichage des courbes"
    ],
    "metadata": {
     "collapsed": false,
@@ -1206,9 +1207,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 133,
    "outputs": [],
    "source": [
+    "# lecture du fichier export.xml --> dataframe rythme\n",
     "rythme = pd.read_xml(rootDir+\"export.xml\", xpath=\".//Record[@type='HKQuantityTypeIdentifierHeartRate']\")\n",
     "rythme = rythme[['creationDate','startDate','value']]\n",
     "rythme['creationDate'] = pd.to_datetime(rythme['creationDate'])\n",
@@ -1798,8 +1800,8 @@
     "            n +=1\n",
     "\n",
     "    afficheEcg(ecg,titre=f, axe=axes[nbFichiers//2,nbFichiers%2])\n",
-    "    display(ecg)\n",
-    "    ecg.info()\n",
+    "    #display(ecg)\n",
+    "    #ecg.info()\n",
     "    nbFichiers +=1\n",
     "    if nbFichiers == 6:\n",
     "        break\n"
