--- a/explorationECG.ipynb
+++ b/explorationECG.ipynb
@@ -1823,7 +1823,7 @@
     "        print(\" !!!!!! NON TROUVE : \"+ str(date[0]))\n",
     "\n",
     "    #Calcul Heart Rate à partir des pics de l'ECG\n",
-    "    limite = 1.5*ecg.derivation.std()\n",
+    "    limite = 1.5*ecg.derivation.std() # un pic se trouve dans des zones de valeurs > 1,5 x std\n",
     "    n = 0\n",
     "    n_prec = 0\n",
     "    periode = 1/511.244\n",
